--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -67,6 +67,7 @@
 
 .btn-wrap{
     padding-top: 60px;
+    text-align: center;
 }
 
 .btn{
@@ -84,22 +85,22 @@
    /*defaults to white*/
 
    &:visited{
-     color: $white;
-     border: 2px solid $white;
+     color: white;
+     border: 2px solid white;
      background-color: transparent !important;
    }
 
-   color: $white;
-   border: 2px solid $white;
+   color: white;
+   border: 2px solid white;
    background-color: transparent !important;
    width: auto;
 
    text-transform: uppercase;
 
    &:hover{
-     color: $black !important;
-     background-color: $white;
-     border: 2px solid $white;
+     color: black !important;
+     background-color: white;
+     border: 2px solid white;
    }
 
    &.inactive{
@@ -111,53 +112,35 @@
 
    &.black{
      color: $black !important;
-     border: 2px solid $black;
+     border: 2px solid black;
 
      &:visited{
-       color: $black !important;
-       border: 2px solid $black;
+       color: black !important;
+       border: 2px solid black;
      }
 
      &:hover{
-       color: $white !important;
-       background-color: $black !important;
-       border: 2px solid $black;
+       color: white !important;
+       background-color: black !important;
+       border: 2px solid black;
      }
 
    }
 
    &.white{
-     color: $white !important;
+     color: white !important;
      border: 2px solid $white;
 
      &:visited{
-       color: $white !important;
-       border: 2px solid $white;
-     }
-
-
-     &:hover{
-       color: $black !important;
-       background-color: $white !important;
-       border: 2px solid $white;
-     }
-
-   }
-
-   &.blue{
-     color: $secondary-color !important;
-     border: 2px solid $secondary-color;
-
-     &:visited{
-       color: $secondary-color !important;
-       border: 2px solid $secondary-color;
-     }
-
-
-     &:hover{
        color: white !important;
-       background-color: $secondary-color !important;
-       border: 2px solid $secondary-color;
+       border: 2px solid white;
+     }
+
+
+     &:hover{
+       color: black !important;
+       background-color: white !important;
+       border: 2px solid white;
      }
 
    }
